--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <div style="margin-bottom:100000vh; color: white;">
-        Hello if you can read this go here: <a href="/1.html">click me</a>
+        Hello if you can read this go here: <a href="/1.html" class="nah">click me</a>
     </div>
+
+    <style>
+        .nah {
+            color: white;
+            
+        }
+        .nah:hover {
+            cursor: none;
+        }
+    </style>
 </body>
 </html>
