--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div style="margin-bottom:100000vh; color: white;">
         Hello if you can read this go here: <a href="/1.html" class="nah">click me</a>
     </div>
+    Not here
 
     <style>
         .nah {
