--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div style="margin-bottom:100000vh; color: white;">
-        Hello if you can read this go here: <a href="/1.html" class="nah">click me</a>
+        Hello if you can read this go here: <a href="/1" class="nah">click me</a>
     </div>
     Not here
 
