--- a/12.html
+++ b/12.html
@@ -7,13 +7,13 @@
     <title>Well done!</title>
 </head>
 <body>
-   Hi Asher,
+   Hi Asher,<br><br>
 
-   Good job on finishing all of that :).
-   We hope it was fun.
+   Good job on finishing all of that :).<br>
+   We hope it was fun.<br>
+<br><br><br>
 
-
-   Happy birthday from Josh, Tiana, Lyria and Daniel.
+   Happy birthday from<br> Josh,<br> Tiana, <br>Lyria <br>and Daniel.
 
 
    
